# aim

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  commands.txt  edit.sh  plan.md  pyproject.toml  run.sh  timetracking.json
aim/: __main__.py  app.py  audio_interface.py  c_nodes.py  importing.py  init_folder.py  listeners.py  nodes.py  numpy_backend.py  run.py  transpiler.py  ui.py  view.py
doc/: ProcessOrder.md  ui.md
example_project/: main.aim  main.txt
example_projects/oscilloscope/: main.py
example_projects/sine/: main.py
pulseaudio_pull/: Cargo.toml  TODO  build.rs  c_example.c  commands.txt
pulseaudio_pull/run/: D.sh  R.sh  T.sh  a.sh  d.sh  u.sh
pulseaudio_pull/src/: main.rs
pulseaudio_pull_bindgen/: Cargo.toml  build.rs  run.sh
pulseaudio_pull_bindgen/run/: b.sh  r.sh  t.sh
pulseaudio_pull_bindgen/src/: main.rs
run/:  .sh  9.sh  B.sh  R.sh  T.sh  b.sh  c.sh  d.sh  g.sh  l.sh  r.sh  s.sh  t.sh  u.sh  v.sh
run/r/: r.sh
src/: aim.rs  audio_output.rs  dsp.rs  execution_order.rs  interface.rs  main.rs  parse.rs  parse_nodes.rs  process.rs  project.rs  ui.rs
src/module/: execution_order.rs  mod.rs  process.rs
src/module/process/: mod.rs  session.rs
src/nodes/: common.rs  group.rs  mod.rs  module.rs  out.rs  sine.rs
src/parse_nodes/: mod.rs  sine.rs
src/ui/: draw.rs  input.rs  pane.rs
testing/new_project_ymidol/: main.py
testing/new_project_ymidol/run/:  .sh
