[tool.poetry]
name = "aim"
version = "0.1.0"
description = "It makes sound if you use it correctly."
authors = ["Einar Rosvoll"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
